# LAST-Stack

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  last_contributing.md  last_readme.md  rustc-ice-2026-05-26T01_07_27-1084.txt
.devcontainer/: devcontainer.json
apps/task-mgmt/: Cargo.toml
apps/task-mgmt/src/: lib.rs
crates/apqp-service/: Cargo.toml
crates/apqp-service/src/: db.rs  main.rs  state.rs
crates/apqp-service/src/handlers/: health.rs  task.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: lib.rs  main.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  style.css
crates/frontend/src/: api.rs  app.rs  lib.rs
crates/frontend/src/components/: mod.rs  nav.rs  status_badge.rs  task_form.rs  task_table.rs
crates/frontend/src/pages/: mod.rs  not_found.rs  task_list.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/notify-service/: Cargo.toml
crates/notify-service/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  events.rs  lib.rs  models.rs
docs/: dev-setup.md
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: error.rs
shared/src/models/: task.rs
