[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/gateway",
    "crates/apqp-service",
    "crates/notify-service",
    "crates/frontend",
    "crates/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ingo <ingo181>"]
license = "MIT"

[workspace.dependencies]
# Shared crate
shared = { path = "crates/shared" }

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Web framework
axum       = { version = "0.8", features = ["macros"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialisation
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database — version aligned with your installed surrealdb
surrealdb = "3.0"

# Messaging
rdkafka = { version = "0.39", features = ["cmake-build"] }

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid   = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

[profile.release]
opt-level = "z"   # minimize binary size
lto       = true
strip     = true

# Leptos (CSR) — für frontend crate
leptos        = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
