[package]
name    = "apqp-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apqp-service"
path = "src/main.rs"

[dependencies]
shared     = { workspace = true }
tokio      = { workspace = true }
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }
surrealdb  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy    = { workspace = true }

# async_trait for FromRequestParts impl
async-trait = "0.1"
time = "0.3.47"
